# Python_Diplom

./: .dockerignore  .env  .env_first  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml
deploy/: .env  docker-compose.yaml
deploy/nginx/: default.conf
source/: .env
source/bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
source/bot/management/commands/: runbot.py
source/bot/migrations/: 0001_initial.py
source/bot/tg/fsm/: base.py  memory_storage.py
source/core/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
source/core/migrations/: 0001_initial.py
source/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
source/goals/migrations/: 0001_initial.py  0002_goal_goalcomment.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
source/goals/tests/: test_board.py
source/todolist/: filters.py  settings.py  urls.py
