[tool.poetry]
name = "python-diplom"
version = "0.1.0"
description = ""
authors = ["avkucher <99530288+avkucher@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_diplom"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
