[tool.poetry]
name = "python-diplom"
version = "0.1.0"
description = ""
authors = ["avkucher <99530288+avkucher@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_diplom"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"
pypi = "^2.1"
psycopg2 = "^2.9.3"


[tool.poetry.group.dev.dependencies]
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
